k8s/observability/prometheus-grafana-alertting-with-helm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-app-route
  namespace: default
spec:
  hostnames:
  - go.app.version.split.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: nginx-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: go-db-service-sample-version-01
      port: 8080
      weight: 30
    - group: ""
      kind: Service
      name: go-db-service-sample-version-02
      port: 8080
      weight: 70
    matches:
    - path:
        type: PathPrefix
        value: /user

    - path:
        type: PathPrefix
        value: /users
